[gd_scene load_steps=6 format=3 uid="uid://player_hud_mc"]

[ext_resource type="Script" path="res://src/Player/MC/PlayerHUD.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.15, 0.05, 0.05, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.1, 0.1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_bg"]
bg_color = Color(0.05, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1, 0.2, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_fill"]
bg_color = Color(0.2, 0.6, 0.8, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 100.0

[node name="HealthLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Health"
theme_override_font_sizes/font_size = 14

[node name="HealthBar" type="ProgressBar" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
value = 100.0
show_percentage = false

[node name="Value" type="Label" parent="Control/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Stamina"
theme_override_font_sizes/font_size = 14

[node name="StaminaBar" type="ProgressBar" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_stamina_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_stamina_fill")
value = 100.0
show_percentage = false

[node name="Value" type="Label" parent="Control/VBoxContainer/StaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1
